src/test/resources/model_test/valid/OneEntity_model/Employee.entity
Employee {
	id : int {@Id}; // the id
	firstName : string ;
	birthDate : date ;
}
