src/test/resources/model_test/invalid/FourEntitiesModel/Employee.entity
Employee {
	id : int { @Id  @NotNull }; // the id
	firstName : stringx { @NotNull @SizeMin(1)  @SizeMax(30) };
}
